--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
     "swiper": "^11.1.1"
   },
