--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "@svgr/rollup": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/date-fns": "^2.6.0",
     "@types/node": "^20.12.8",
     "@types/react": "^18.2.66",
@@ -48,6 +50,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
