--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
