--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ lerna-debug.log*
 
 client/node_modules
 client/.env
-client/package.json
-client/package-lock.json
 client/vite.config.ts
+server/vendor
+server/composer.json
 dist
 dist-ssr
 *.local
